welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: not found: value fasle
while (sortieTrouvee==fasle) {
                      ^Poucet:12: error: value esle is not a member of Unit
possible cause: maybe a semicolon is missing before `value esle'?
  } esle {
    ^