welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var b:Int=0

while (sortieTrouvee==fasle) {
  for (c<- 1 to 5) {
    avance()
    if (estSurBiscuit()==true) {
      b=b+1
    }
  }
  if (b>2) {
    gauche()
  } esle {
    droite()
  }
  b=0
}
avance()